--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "complete",
     "tutorial"
   ],
-  "author": "Maximilian Schwarzmüller",
+  "author": "Piyush Nariani",
   "license": "ISC",
   "devDependencies": {
     "http-server": "^0.11.1"
