--- a/functions/package.json
+++ b/functions/package.json
@@ -6,7 +6,8 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "web-push": "web-push"
   },
   "engines": {
     "node": "8"
@@ -15,7 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.1.0"
+    "firebase-functions": "^3.1.0",
+    "web-push": "^3.4.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
